--- a/config.yaml
+++ b/config.yaml
@@ -3,9 +3,9 @@ APP_KEY: ""
 APP_SECRET: ""
 
 #계좌번호 앞 8자리
-CANO: "68359806"
+CANO: ""
 #계좌번호 뒤 2자리
-ACNT_PRDT_CD: "01"
+ACNT_PRDT_CD: ""
 
 #실전투자
 URL_BASE: "https://openapi.koreainvestment.com:9443"
